# pypsa-gui

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  getting_started.md
docs/research_modules/: api.md  index.md  quickstart.md
src/pypsa_gui/: __init__.py  main.py
src/pypsa_gui/models/: __init__.py  network_session.py  session_view.py
src/pypsa_gui/modules/: base.py  registry.py
src/pypsa_gui/modules/flow_tracing/: adapter.py  models.py  module.py  page.py  service.py
src/pypsa_gui/services/: network_io.py  network_loader.py  network_store.py  network_summary.py  optimisation.py
src/pypsa_gui/ui/: __init__.py  central_panel.py  main_window.py
src/pypsa_gui/ui/dialogs/: workspace_selection_dialog.py
src/pypsa_gui/ui/models/: buses_table_model.py
src/pypsa_gui/ui/pages/: buses_page.py  capacities_page.py  central_panel.py  component_page.py  network_map_page.py  optimisation_page.py  overview_page.py  plots_page.py  results_page.py  summary_page.py
src/pypsa_gui/ui/widgets/: __init__.py  central_panel.py  figure_panel.py
src/pypsa_gui/workers/: optimisation_worker.py
